samples/ai-gateway-integration/llama-7b-inferencepool.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama2-7b-epp
  namespace: default
spec:
  selector:
    app: llama2-7b-epp
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
      appProtocol: http2
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama2-7b-epp
  namespace: default
  labels:
    app: llama2-7b-epp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama2-7b-epp
  template:
    metadata:
      labels:
        app: llama2-7b-epp
    spec:
      serviceAccountName: llama2-7b-epp
      terminationGracePeriodSeconds: 130
      containers:
        - name: epp
          image: registry.k8s.io/gateway-api-inference-extension/epp:v1.5.0
          imagePullPolicy: IfNotPresent
          args:
            - --pool-name
            - "llama2-7b"
            - --pool-namespace
            - "default"
            - --v
            - "4"
            - --zap-encoder
            - "json"
            - --grpc-port
            - "9002"
            - --grpc-health-port
            - "9003"
            - --config-file
            - "/config/default-plugins.yaml"
          ports:
            - containerPort: 9002
            - containerPort: 9003
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - name: plugins-config-volume
              mountPath: "/config"
      volumes:
        - name: plugins-config-volume
          configMap:
            name: plugins-config
