samples/ai-gateway-integration/mistral-7b-inferencepool.yaml
apiVersion: v1
kind: Service
metadata:
  name: mistral-7b-epp
  namespace: default
spec:
  selector:
    app: mistral-7b-epp
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
      appProtocol: http2
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mistral-7b-epp
  namespace: default
  labels:
    app: mistral-7b-epp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mistral-7b-epp
  template:
    metadata:
      labels:
        app: mistral-7b-epp
    spec:
      serviceAccountName: mistral-7b-epp
      terminationGracePeriodSeconds: 130
      containers:
        - name: epp
          image: registry.k8s.io/gateway-api-inference-extension/epp:v1.5.0
          args:
            - --pool-name
            - "mistral-7b"
            - --pool-namespace
            - "default"
            - --v=4
            - --grpc-port=9002
            - --grpc-health-port=9003
            - --config-file=/config/default-plugins.yaml
          ports:
            - containerPort: 9002
            - containerPort: 9003
          volumeMounts:
            - name: plugins-config-volume
              mountPath: /config
      volumes:
        - name: plugins-config-volume
          configMap:
            name: plugins-config
